third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking/typing/mutate.exp
module 0x8675309::M {
    struct S has copy, drop {
        f: u64,
    }
    fun bar(s: &mut S): &mut S {
        s
    }
    fun baz(): S {
        S{f: 0}
    }
    fun foo(x: &mut u64): &mut u64 {
        x
    }
    fun t0() {
        *&mut 0 = 1;
        &mut (&mut S{f: 0}).f = 1;
        *foo(&mut 0) = 1;
        &mut bar(&mut S{f: 0}).f = 1;
        &mut bar(&mut S{f: 0}).f = 1;
        &mut (&mut baz()).f = 1;
        &mut (&mut baz()).f = 1;
    }
    fun t1() {
        let _t1 = &mut S{f: 0};
        *_t1 = S{f: 1};
        &mut _t1.f = 1;
        &mut _t1.f = 1;
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: invalid assignment
   ┌─ mutate.move:16:9
   │
16 │         &mut (&mut S{f: 0}).f = 1;
   │         ^^^^^^^^^^^^^^^^^^^^^ Invalid assignment syntax. Expected: a local, a field write, or a deconstructing assignment

error: invalid assignment
   ┌─ mutate.move:18:9
   │
18 │         &mut bar(&mut S{f: 0}).f = 1;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^ Invalid assignment syntax. Expected: a local, a field write, or a deconstructing assignment

error: invalid assignment
   ┌─ mutate.move:19:9
   │
19 │         &mut bar(&mut S{f: 0}).f = 1;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^ Invalid assignment syntax. Expected: a local, a field write, or a deconstructing assignment

error: invalid assignment
   ┌─ mutate.move:20:9
   │
20 │         &mut (&mut baz()).f = 1;
   │         ^^^^^^^^^^^^^^^^^^^ Invalid assignment syntax. Expected: a local, a field write, or a deconstructing assignment

error: invalid assignment
   ┌─ mutate.move:21:9
   │
21 │         &mut (&mut baz()).f = 1;
   │         ^^^^^^^^^^^^^^^^^^^ Invalid assignment syntax. Expected: a local, a field write, or a deconstructing assignment

error: invalid assignment
   ┌─ mutate.move:26:9
   │
26 │         &mut _t1.f = 1;
   │         ^^^^^^^^^^ Invalid assignment syntax. Expected: a local, a field write, or a deconstructing assignment

error: invalid assignment
   ┌─ mutate.move:27:9
   │
27 │         &mut _t1.f = 1;
   │         ^^^^^^^^^^ Invalid assignment syntax. Expected: a local, a field write, or a deconstructing assignment
